[project]
name = "saber_96400"
version = "1.0.0"
description = "Saber 96400 to flat CSV"
readme = "README.md"
requires-python = ">=3.9"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
]

[project.optional-dependencies]
test = [
  "allure-pytest",
  "pytest",
  "pytest-cov[all]",
  "pytest-xdist",
  "mypy",
  "pylint",
  "flake8",
  "yapf"
]

[tool.yapf]
based_on_style = google

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
exclude = [
    '/.git/',
    '/__pycache__/',
    '/docs/source/conf.py/',
    '/old/',
    '/build/',
    '/dist/',
    '/tests/'',  
]